# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
authors.workspace = true
build = "build.rs"
edition = "2021"
license = "EUPL-1.2"
name = "opentalk-controller-core"
publish = false
version.workspace = true

[lints]
workspace = true

[dependencies]
actix = "0.13"
actix-cors = "0.7"
actix-http = { version = "3", features = ["rustls-0_23"] }
actix-rt.workspace = true
actix-web = { workspace = true, features = ["rustls-0_23"] }
actix-web-actors = "4.3"
actix-web-httpauth.workspace = true
anstream.workspace = true
arc-swap.workspace = true
async-trait.workspace = true
base64.workspace = true
bytes.workspace = true
bytestring = { workspace = true, features = ["serde"] }
chrono.workspace = true
chrono-tz = { workspace = true, features = ["serde"] }
clap.workspace = true
diesel-async.workspace = true
either.workspace = true
futures.workspace = true
itertools.workspace = true
jsonwebtoken = "9.3"
kustos.workspace = true
lapin-pool.workspace = true
log = { workspace = true, features = ["serde"] }
md5.workspace = true
mime = "0.3"
nix = { version = "0.29", features = ["signal"] }
openidconnect.workspace = true
opentalk-cache.workspace = true
opentalk-controller-settings.workspace = true
opentalk-controller-utils.workspace = true
opentalk-database.workspace = true
opentalk-db-storage.workspace = true
opentalk-janus-media.workspace = true
opentalk-jobs.workspace = true
opentalk-keycloak-admin.workspace = true
opentalk-mail-worker-protocol = { workspace = true, features = ["client"] }
opentalk-nextcloud-client.workspace = true
opentalk-r3dlock.workspace = true
opentalk-signaling-core.workspace = true
opentalk-types = { workspace = true, features = ["backend", "clap"] }
opentalk-types-common = { workspace = true, features = ["backend"] }
opentelemetry = { workspace = true, features = ["metrics", "trace"] }
opentelemetry-otlp = "0.17"
opentelemetry-prometheus = "0.17"
opentelemetry_sdk = { version = "0.24", features = [
  "metrics",
  "rt-tokio-current-thread",
] }
owo-colors.workspace = true
parking_lot.workspace = true
phonenumber.workspace = true
prometheus = "0.13"
rand.workspace = true
redis = { workspace = true, features = ["connection-manager", "tokio-comp"] }
redis-args.workspace = true
reqwest = { workspace = true, features = ["rustls-tls-native-roots"] }
ring = "0.17"
rrule = "0.13"
rustls = "0.23"
rustls-pemfile = "2.0"
rustls-pki-types = "1.3"
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
sysinfo = { version = "0.31", default-features = false, features = ["system"] }
tabled = "0.16"
tokio = { workspace = true, features = ["signal"] }
tokio-stream.workspace = true
tracing.workspace = true
tracing-actix-web = { version = "0.7" }
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "parking_lot",
] }
url.workspace = true
utoipa = { workspace = true, features = ["actix_extras"] }
utoipa-swagger-ui = { workspace = true, features = [
  "actix-web",
], optional = true }
uuid = { workspace = true, features = ["serde", "v4"] }
validator.workspace = true
yaml-rust2.workspace = true

[dev-dependencies]
opentalk-test-util = { workspace = true, features = ["database"] }
pretty_assertions.workspace = true
serial_test.workspace = true

[build-dependencies]
snafu.workspace = true
vergen = { version = "9", features = ["build", "cargo", "rustc"] }
vergen-gix = { version = "1" }

[features]
default = []
swagger = ["dep:utoipa-swagger-ui"]

[package.metadata.cargo-machete]
ignored = [
  # is used during build
  "vergen",
  "vergen_gix",
]
