# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "opentalk-controller-settings"
description = "Settings for opentalk-controller"
edition = "2021"
license = "EUPL-1.2"
authors.workspace = true
version.workspace = true
publish = false

[dependencies]
# Settings related
config.workspace = true
arc-swap.workspace = true
serde.workspace = true
openidconnect.workspace = true
chrono.workspace = true
url.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }
redis = { workspace = true, features = ["tokio-comp", "connection-manager"] }
cidr = { version = "0.2", features = ["serde"] }
phonenumber.workspace = true
redis-args = { path = "../redis-args", package = "opentalk-redis-args" }
rustc-hash.workspace = true
anstream.workspace = true
owo-colors.workspace = true
strum.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
serde_json.workspace = true
