# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "opentalk-controller-settings"
description = "Settings for opentalk-controller"
edition = "2021"
license = "EUPL-1.2"
authors.workspace = true
version.workspace = true
publish = false

[dependencies]
# Settings related
anstream.workspace = true
arc-swap.workspace = true
cidr = { version = "0.2", features = ["serde"] }
config.workspace = true
openidconnect.workspace = true
owo-colors.workspace = true
phonenumber.workspace = true
rustc-hash.workspace = true
serde_path_to_error = "0.1.15"
serde.workspace = true
snafu.workspace = true
url.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
serde_json.workspace = true
