# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "opentalk-controller-utils"
description = "Utilities used in opentalk-controller"
edition = "2021"
license = "EUPL-1.2"
authors.workspace = true
version.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
database = { path = "../database", package = "opentalk-database" }
db-storage = { path = "../db-storage", package = "opentalk-db-storage" }
diesel-async.workspace = true
displaydoc.workspace = true
kustos = { path = "../kustos" }
kustos-shared = { path = "../kustos-shared" }
log.workspace = true
nextcloud-client = { path = "../nextcloud-client", package = "opentalk-nextcloud-client" }
opentalk_log = { path = "../log", package = "opentalk-log" }
serde_json.workspace = true
settings = { path = "../controller-settings", package = "opentalk-controller-settings" }
signaling-core = { path = "../signaling-core", package = "opentalk-signaling-core" }
thiserror.workspace = true
types = { path = "../types", package = "opentalk-types" }
