# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "opentalk-controller-utils"
description = "Utilities used in opentalk-controller"
edition = "2021"
license = "EUPL-1.2"
authors.workspace = true
version.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
opentalk-database.workspace = true
opentalk-db-storage.workspace = true
diesel-async.workspace = true
displaydoc.workspace = true
kustos.workspace = true
kustos-shared.workspace = true
log.workspace = true
opentalk-nextcloud-client = { workspace = true, default-features = true }
opentalk-log.workspace = true
serde_json.workspace = true
opentalk-controller-settings.workspace = true
opentalk-signaling-core.workspace = true
thiserror.workspace = true
opentalk-types.workspace = true
