# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
authors.workspace = true
description = "Utilities used in opentalk-controller"
edition = "2021"
license = "EUPL-1.2"
name = "opentalk-controller-utils"
publish = false
version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
diesel-async.workspace = true
kustos.workspace = true
kustos-shared.workspace = true
log.workspace = true
opentalk-controller-settings.workspace = true
opentalk-database.workspace = true
opentalk-db-storage.workspace = true
opentalk-log.workspace = true
opentalk-nextcloud-client.workspace = true
opentalk-signaling-core.workspace = true
opentalk-types.workspace = true
opentalk-types-common.workspace = true
serde_json.workspace = true
snafu.workspace = true
