# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "opentalk-controller-core"
edition = "2021"
license = "EUPL-1.2"
authors.workspace = true
version.workspace = true
publish = false
build = "build.rs"

[dependencies]
controller-utils = { path = "../controller-utils", package = "opentalk-controller-utils" }
controller-settings = { path = "../controller-settings", package = "opentalk-controller-settings" }
database = { path = "../database", package = "opentalk-database" }
db-storage = { path = "../db-storage", package = "opentalk-db-storage" }
jobs = { path = "../jobs", package = "opentalk-jobs"  }
mail-worker-proto = { path = "../mail-worker-protocol", package = "opentalk-mail-worker-protocol", features = [
    "client",
] }
nextcloud-client = { path = "../nextcloud-client", package = "opentalk-nextcloud-client", default-features = false, features = [
    "rustls-tls-native-roots",
] }
signaling-core = { path = "../signaling-core", package = "opentalk-signaling-core" }
types = { path = "../types", package = "opentalk-types", features = ["backend", "clap"] }

### Logging utilities
log = { workspace = true, features = ["serde"] }
tracing.workspace = true
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = [
    "parking_lot",
    "env-filter",
] }
tracing-opentelemetry.workspace = true
opentelemetry = { workspace = true, features = [
    "trace",
    "rt-tokio-current-thread",
    "metrics",
] }
opentelemetry-otlp = "0.12"
opentelemetry-prometheus = "0.12"
prometheus = "0.13"
tracing-actix-web = { version = "0.7" }

### Config
serde.workspace = true
clap.workspace = true
arc-swap.workspace = true

### Error handling
anyhow.workspace = true
thiserror.workspace = true
validator.workspace = true

### Database ORM
diesel = { workspace = true, features = [
    "uuid",
    "serde_json",
    "chrono",
] }
diesel-async.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }
cache = { path = "../cache" , package = "opentalk-cache" }

### Web Framework & Runtime
tokio = { workspace = true, features = ["signal"] }
tokio-stream.workspace = true
actix-web = { workspace = true, features = ["rustls"] }
actix-rt.workspace = true
actix-web-httpauth.workspace = true
actix-cors = "0.6"
async-trait.workspace = true
futures.workspace = true
bytes.workspace = true
serde_json.workspace = true
mime = "0.3"
bytestring = { workspace = true, features = ["serde"] }

### RabbitMQ
lapin-pool = { path = "../lapin-pool" }

### Redis
redis = { workspace = true, features = ["tokio-comp", "connection-manager"] }
url.workspace = true
r3dlock = { path = "../r3dlock" }

### OpenID Connect & JWT
openidconnect.workspace = true
reqwest = { workspace = true, features = [
    "rustls-tls-native-roots",
] }
jsonwebtoken = "8.3.0"
base64.workspace = true
chrono.workspace = true
chrono-tz = { workspace = true, features = ["serde"] }

### Websockets
actix = "0.13"
actix-http = "3"
actix-web-actors = "4.2"

### Rust Encryption
ring = "0.16"
rustls = "0.20"
rustls-pemfile = "1.0"
md5.workspace = true

### QoL/Util
either.workspace = true
itertools.workspace = true
phonenumber.workspace = true
email_address = "0.2.4"
redis-args = { path = "../redis-args" }

# Random Distributions etc. Used for RR
rand.workspace = true

### Reload controller process
sysinfo = { version = "0.29", default-features = false }
nix = "0.26"

### Access Control
kustos = { path = "../kustos" }
keycloak-admin = { path = "../keycloak-admin" }

rrule = "0.11"

### CLI
tabled = "0.12"

[dev-dependencies]
test-util = { path = "../test-util", package = "opentalk-test-util", features = ["database"] }
pretty_assertions.workspace = true

[build-dependencies]
anyhow.workspace = true
vergen = { version = "8", features = [
    "build",
    "cargo",
    "rustc",
    "git",
    "git2",
] }

[package.metadata.cargo-machete]
ignored = [
  # is used during build
  "vergen",
]
