# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
authors.workspace = true
description = "OpenTalk database functionality"
documentation = "https://docs.rs/opentalk-database"
edition = "2021"
homepage.workspace = true
license = "EUPL-1.2"
name = "opentalk-database"
publish = true
repository.workspace = true
version.workspace = true

[dependencies]
opentalk-controller-settings.workspace = true

### ORM and Database connector
deadpool-runtime = { version = "0.1", features = ["tokio_1"] }
diesel = { workspace = true, features = [
  "chrono",
  "i-implement-a-third-party-backend-and-opt-into-breaking-changes",
  "serde_json",
  "uuid",
] }
diesel-async = { workspace = true, features = ["deadpool", "postgres"] }

async-trait = "0.1"
futures-core = "0.3"


### Error handling
snafu.workspace = true

### Logging utilities
log = { workspace = true, features = ["serde"] }
pin-project-lite = "0.2"
tracing.workspace = true

### Opentelementry metrics
opentelemetry.workspace = true
