# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
authors.workspace = true
edition = "2021"
license = "EUPL-1.2"
name = "opentalk-db-storage"
publish = false
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kustos.workspace = true
opentalk-controller-settings.workspace = true
opentalk-database.workspace = true
opentalk-types = { workspace = true, features = ["backend"] }

serde.workspace = true
serde_json = { workspace = true, features = ["raw_value"] }

### Error handling
snafu.workspace = true

### Database ORM
bigdecimal.workspace = true
diesel = { workspace = true, features = [
  "chrono",
  "numeric",
  "serde_json",
  "uuid",
] }
diesel-async.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }

### Database migrations
barrel = { version = "0.7", features = ["pg"] }
refinery = { version = "0.8", features = ["tokio-postgres"] }
refinery-core = "0.8"

### Logging utilities
log = { workspace = true, features = ["serde"] }
tracing.workspace = true

### For migration
chrono.workspace = true
chrono-tz = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["signal"] }

derive_more.workspace = true
opentalk-diesel-newtype.workspace = true
redis-args.workspace = true
strum.workspace = true

md5.workspace = true
rustc-hash.workspace = true

[dev-dependencies]
actix-rt.workspace = true
opentalk-test-util = { workspace = true, features = ["database"] }
pretty_assertions.workspace = true
serial_test.workspace = true
