# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "opentalk-diesel-newtype-impl"
edition = "2021"
authors.workspace = true
version.workspace = true
publish = false

[lib]
proc-macro = true

[dependencies]
quote.workspace = true
syn = { workspace = true, features = ["extra-traits"] }
proc-macro2.workspace = true
proc-macro-crate.workspace = true
