# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "opentalk-diesel-newtype-impl"
edition = "2021"
license = "EUPL-1.2"
authors.workspace = true
version.workspace = true
publish = true
description = "Newtype derive for diesel types used in OpenTalk crates - proc-macro implementation"

[lib]
proc-macro = true

[dependencies]
quote.workspace = true
syn = { workspace = true, features = ["extra-traits"] }
proc-macro2.workspace = true
proc-macro-crate.workspace = true
