# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "opentalk-diesel-newtype"
documentation = "https://docs.rs/opentalk-diesel-newtype"
edition = "2021"
license = "EUPL-1.2"
authors.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
publish = true
description = "Newtype derive for diesel types used in OpenTalk crates"

[dependencies]
opentalk-diesel-newtype-impl.workspace = true
diesel = { workspace = true, features = ["postgres"] }
serde = { workspace = true, features = ["derive"] }
