# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "etherpad-client"
version = "0.1.0"
edition = "2021"
license = "EUPL-1.2"
authors.workspace = true
publish = false

[dependencies]
reqwest = { workspace = true, features = [
    "json",
    "cookies",
    "rustls-tls-native-roots",
    "stream",
] }
serde.workspace = true
serde_repr = "0.1"
serde_json.workspace = true
anyhow.workspace = true
tokio = { workspace = true, features = ["time"] }
chrono.workspace = true
percent-encoding = "2.2"
url.workspace = true
bytes.workspace = true
futures.workspace = true
