# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "etherpad-client"
version = "0.1.0"
edition = "2021"
license = "EUPL-1.2"
authors.workspace = true
publish = false

[dependencies]
reqwest = { workspace = true, features = [
    "json",
    "cookies",
    "rustls-tls-native-roots",
    "stream",
] }
serde.workspace = true
serde_repr.workspace = true
serde_json.workspace = true
anyhow.workspace = true
bytes.workspace = true
futures.workspace = true
