# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "opentalk-janus-media"
edition = "2021"
license = "EUPL-1.2"
authors.workspace = true
version.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
controller-settings = { path = "../controller-settings", package = "opentalk-controller-settings" }
futures.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
janus-client = { path = "../janus-client" }
pin-project-lite = "0.2"
redis.workspace = true
redis-args = { path = "../redis-args" }
lapin-pool = { path = "../lapin-pool" }
signaling-core = { path = "../signaling-core", package = "opentalk-signaling-core" }
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
types = { path = "../types", package = "opentalk-types", features = ["backend"] }

[dev-dependencies]
test-util = { path = "../test-util", package = "opentalk-test-util", features = ["database"] }
pretty_assertions.workspace = true
