# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "opentalk-janus-media"
edition = "2021"
license = "EUPL-1.2"
authors.workspace = true
version.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
lapin-pool.workspace = true
log.workspace = true
opentalk-controller-settings.workspace = true
opentalk-janus-client.workspace = true
opentalk-signaling-core.workspace = true
opentalk-types = { workspace = true, features = ["backend"] }
pin-project-lite = "0.2"
redis-args.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-stream.workspace = true
tokio.workspace = true
tracing.workspace = true
