# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
authors.workspace = true
edition = "2021"
license = "EUPL-1.2"
name = "opentalk-janus-media"
publish = false
version.workspace = true

[dependencies]
async-trait.workspace = true
futures.workspace = true
lapin-pool.workspace = true
log.workspace = true
opentalk-controller-settings.workspace = true
opentalk-janus-client.workspace = true
opentalk-signaling-core.workspace = true
opentalk-types = { workspace = true, features = ["backend"] }
pin-project-lite = "0.2"
redis.workspace = true
redis-args.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
