# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "opentalk-jobs"
edition = "2021"
license = "EUPL-1.2"
authors.workspace = true
version.workspace = true
publish = false
description = "OpenTalk job execution system"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
opentalk-controller-utils.workspace = true
opentalk-database.workspace = true
opentalk-db-storage.workspace = true
displaydoc.workspace = true
kustos.workspace = true
log.workspace = true
opentalk-nextcloud-client = { workspace = true, default-features = true }
opentalk-log.workspace = true
serde.workspace = true
serde_json.workspace = true
opentalk-controller-settings.workspace = true
opentalk-signaling-core.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["time"] }
opentalk-types.workspace = true
