# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
authors.workspace = true
description = "OpenTalk job execution system"
edition = "2021"
license = "EUPL-1.2"
name = "opentalk-jobs"
publish = false
version.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
etcd-client = "0.14"
kustos.workspace = true
log.workspace = true
opentalk-controller-settings.workspace = true
opentalk-controller-utils.workspace = true
opentalk-database.workspace = true
opentalk-db-storage.workspace = true
opentalk-keycloak-admin.workspace = true
opentalk-log.workspace = true
opentalk-nextcloud-client.workspace = true
opentalk-signaling-core.workspace = true
opentalk-types.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
tokio = { workspace = true, features = ["time"] }
tokio-cron-scheduler = "0.11"
uuid.workspace = true

[dev-dependencies]
actix-rt.workspace = true
bytes.workspace = true
env_logger.workspace = true
futures.workspace = true
opentalk-signaling-core = { workspace = true, features = ["mocking"] }
opentalk-test-util = { workspace = true, features = ["controller", "database"] }
serial_test.workspace = true
