# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
authors.workspace = true
edition = "2021"
license = "EUPL-1.2"
name = "opentalk-keycloak-admin"
publish = false
version.workspace = true

[dependencies]
log.workspace = true
reqwest = { workspace = true, features = ["json", "rustls-tls-native-roots"] }
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
tokio.workspace = true
url.workspace = true

[dev-dependencies]
serde_json.workspace = true
