# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "opentalk-kustos-prefix-impl"
edition = "2021"
license = "EUPL-1.2"
authors.workspace = true
version.workspace = true
publish = true
description = "Derive macro for defining kustos prefix - proc-macro implementation"

[lib]
proc-macro = true

[dependencies]
quote.workspace = true
syn = { workspace = true, features = ["extra-traits"] }
proc-macro2.workspace = true
proc-macro-crate.workspace = true
