# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "opentalk-kustos-prefix"
documentation = "https://docs.rs/opentalk-kustos-prefix"
edition = "2021"
license = "EUPL-1.2"
authors.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
publish = true
description = "Derive macro for defining kustos prefix"

[dependencies]
opentalk-kustos-prefix-impl.workspace = true
kustos-shared.workspace = true
