# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "kustos"
version = "0.1.0"
edition = "2021"
license = "EUPL-1.2"
authors.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { path = "../database", package = "opentalk-database" }
shared = { path = "../kustos-shared", package = "kustos-shared", features = ["internal"] }

## Database migration
barrel = { version = "0.7", features = ["pg"] }

### Error handling
thiserror.workspace = true
anyhow.workspace = true

### Database ORM
diesel = { workspace = true, features = [
    "uuid",
    "serde_json",
    "chrono",
] }
diesel-async.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }

### Logging utilities
log = { workspace = true, features = ["serde"] }
tracing.workspace = true
tracing-futures = "0.2"

### QoL
itertools.workspace = true
futures.workspace = true
async-trait = "0.1"

tokio = { workspace = true, features = ["macros"] }
parking_lot.workspace = true

### TODO(r.floren) add this as a default feature
actix-web.workspace = true

### Opentelementry metrics
opentelemetry.workspace = true

[dependencies.casbin]
workspace = true
features = ["runtime-tokio", "incremental"]

[dev-dependencies]
serial_test.workspace = true
# TODO(r.floren) remove this in the future. Currently used to migrate in tests. Find something lighter.
db-storage = { path = "../db-storage", package = "opentalk-db-storage" }
url.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
pretty_assertions.workspace = true
